@@ -1,10 +1,11 @@
 package com.api.carrental.Config;
 
+import org.springframework.beans.factory.annotation.Autowired;
+import static org.springframework.security.config.Customizer.withDefaults;
+
 import java.util.Arrays;
 import java.util.List;
 
-import static org.springframework.security.config.Customizer.withDefaults;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -18,7 +19,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.api.carrental.Service.MyUserService;
 
@@ -62,7 +63,6 @@ public class SecurityConfig {
 				.requestMatchers("/api/caravailability/add/{carId}/{managerId}").hasAuthority("Manager")
 				.requestMatchers("/api/Manager/getAll").hasAuthority("Manager")
 				.requestMatchers("/swagger-ui/**").permitAll()
-				
 				.anyRequest().permitAll()
 			)
 			.sessionManagement(session->session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
@@ -71,16 +71,18 @@ public class SecurityConfig {
 
 		return http.build();
 	}
+	
 	@Bean
 	UrlBasedCorsConfigurationSource corsConfigurationSource() {
-		CorsConfiguration configuration=new CorsConfiguration();
- 	    configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
- 	    configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
- 	    configuration.setExposedHeaders(List.of("*"));
- 	    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
- 	    source.registerCorsConfiguration("/**", configuration);
- 	    return source;
+	    CorsConfiguration configuration = new CorsConfiguration();
+	    configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+	    configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
+	    configuration.setAllowedHeaders(List.of("*"));
+	    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+	    source.registerCorsConfiguration("/**", configuration);
+	    return source;
 	}
+	
 	@Bean
 	AuthenticationProvider getAuth() {
 		DaoAuthenticationProvider dao = new DaoAuthenticationProvider();
@@ -98,4 +100,3 @@ public class SecurityConfig {
 		  return auth.getAuthenticationManager();
 	 }
 }
-
